# Regime-Trade-Desk

./: LICENSE  README.md  SKILL.md  pyproject.toml
src/regime_trade_desk/: __init__.py  cli.py
src/regime_trade_desk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/regime_trade_desk/decision/: __init__.py  adjusters.py  context.py  engine.py  flags.py  rules.py
src/regime_trade_desk/domain/: enums.py  models.py  series.py
src/regime_trade_desk/indicators/: __init__.py  base.py  engine.py  moving_average.py  oscillators.py  volatility.py
src/regime_trade_desk/io/: __init__.py  loaders.py
src/regime_trade_desk/pillars/: __init__.py  base.py  momentum.py  trend.py
src/regime_trade_desk/pillars/macro/: __init__.py  components.py  engine.py  market_data.py  mathutils.py  regime.py
src/regime_trade_desk/reporting/: __init__.py  renderers.py
src/regime_trade_desk/scoring/: __init__.py  scorecard.py
tests/: conftest.py  factories.py  test_cli.py  test_decision.py  test_flags.py  test_indicators.py  test_macro.py  test_pillars_momentum.py  test_pillars_trend.py  test_scorecard.py
